feat(i18n): bilingual (vi/en) support for catalog + auto-translate on write
- common-utils: LocaleContext, LocaleInterceptor (Accept-Language), LocaleUtil.pick, MessageUtil
- catalog: migrate Place/Hotel/Restaurant/Amenity content to Map<String,String> (Pattern 1),
  mappers flatten by locale, ES split fields (nameVi/nameEn) + analyzers, i18n error messages
- TranslationService (free gtx provider, swappable) + LocalizedTranslator (changed-field aware)
- auto-translate on write: admin Place/Amenity (PlaceService, AmenityCatalogService),
  partner Hotel/Restaurant (wrap -> resolveFromString)
- forward Accept-Language through proxies: admin-service CatalogClient, partner-service CatalogPartnerClient
- PartnerCatalogDtos: ImageReq.caption / UpsertContentBlockReq.text String (fix 400 binding)
- seed data bilingual of(vi,en): hotels, restaurants, places, amenity catalog + helper Map overloads
- user-service: PUT /api/users/me/locale